Fixed the wonkiness in the PrintView screen. Switched the base font-size to 5pts for both the screen and the printout. The screen fonts were way too large due to the difference in physical em size used by the responsive font scaling in _base.scss. pts forces it to be the same for both devices,

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -3,6 +3,8 @@
 @use './layout';
 @use './typography';
 
+$print-root-size: 5pt;
+
 *,
 *::after,
 *::before {
@@ -36,6 +38,16 @@ html {
 
   @include mixins.respond(x-small) {
     font-size: 37.5%; // 1rem = 6px
+  }
+}
+
+html.print-preview {
+  font-size: $print-root-size !important;
+}
+
+@media print {
+  html {
+    font-size: $print-root-size !important;
   }
 }
 
